2011-02-24  Anders Carlsson  <andersca@apple.com>

        Fix clang build.

        * WebCoreSupport/WebKeyGenerator.m:
        (toWebCertificateParseResult):
        (-[WebKeyGenerator addCertificatesToKeychainFromData:]):
        * WebView/WebTextCompletionController.mm:

2011-02-24  Peter Kasting  <pkasting@google.com>

        Reviewed by Eric Seidel.

        Drop the "U; " encryption level from the User Agent string.
        https://bugs.webkit.org/show_bug.cgi?id=54566

        * WebView/WebView.mm:
        (+[WebView _standardUserAgentWithApplicationName:]):

2011-02-24  Andrew Wilson  <atwilson@chromium.org>

        Unreviewed, rolling out r79570.
        http://trac.webkit.org/changeset/79570
        https://bugs.webkit.org/show_bug.cgi?id=54874

        Breaks chromium build because glue/mocks/mock_web_frame.h/cc
        was not updated

        * WebView/WebFrame.mm:
        * WebView/WebFramePrivate.h:

2011-02-24  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Alexey Proskuryakov.

        DumpRenderTree should reset frame opener between tests.
        https://bugs.webkit.org/show_bug.cgi?id=54874

        Added clearOpener method to WebFramePrivate.

        * WebView/WebFrame.mm:
        (-[WebFrame _clearOpener]):
        * WebView/WebFramePrivate.h:

2011-02-22  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Alexey Proskuryakov.

        Drop the language tag part from the User Agent string
        https://bugs.webkit.org/show_bug.cgi?id=54560

        * WebView/WebView.mm:
        (+[WebView _standardUserAgentWithApplicationName:]): Drop the
        language tag part.

2011-02-22  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson.

        Part of <rdar://problem/8762042> and https://bugs.webkit.org/show_bug.cgi?id=54514
        API to view and delete Application Cache data by origin.

        * WebCoreSupport/WebApplicationCache.mm: