@@ -1,3 +1,9 @@
+2011-02-25  Mark Rowe  <mrowe@apple.com>
+
+        <rdar://problem/8902546> Build fix.
+
+        * Misc/QuickDrawCompatibility.h:
+
 2011-02-24  Anders Carlsson  <andersca@apple.com>
 
         Fix clang build.
